...
import androidx.compose.ui.res.stringResource
import androidx.compose.ui.semantics.Role
import androidx.compose.ui.unit.dp
import com.nagopy.android.foldlytics.R
import com.nagopy.android.foldlytics.ui.FoldlyticsTheme

internal const val WIDGET_CONFIGURATION_SCROLL_TAG = "widget_configuration_scroll"
internal const val WIDGET_CONFIGURATION_SAVE_TAG = "widget_configuration_save"

class SummaryWidgetConfigurationActivity : ComponentActivity() {
    override fun onCreate(savedInstanceState: Bundle?) {
        super.onCreate(savedInstanceState)
        setResult(RESULT_CANCELED)
        val id = intent.getIntExtra(AppWidgetManager.EXTRA_APPWIDGET_ID, AppWidgetManager.INVALID_APPWIDGET_ID)
...
